2011-10-31  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/strconv.hxx:
 - Add redundant string_traits<const char[N]> to keep Visual Studio happy.
 - Fixes #233; thanks Sam Kapilivsky.
 test/unit/test_string_conversion.cxx:
 - New.
 - Unit-tests string conversions (for now, only of various string types).
2011-10-31  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/unit/test_prepared_statement.cxx:
 - Fixed two Visual Studio warnings.
 - Fixes #234.  Thanks (you guessed it) Sam Kapilivsky.
2011-10-31  Jeroen T. Vermeulen <jtv@xs4all.nl>
 win32/vc-libpqxx.mak.template:
 - Fixed typos introduced in my application of the patch in #228.
 - Should get Visual Studio build working again.
 - Fixes #229.  Thanks Sam Kapilivsky.
2011-10-28  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection.hxx:
 - Very slight wording change; hope it's a bit clearer.
 - Thanks Sam Kapilivsky for pointing this out in #222.
2011-10-28  Jeroen T. Vermeulen <jtv@xs4all.nl>
 win32/vc-libpqxx.mak.template, win32/vc-test.mak.template:
 - The rest of the patch in #228.  Thanks Sam Kapilivsky.
2011-10-28  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/test000.cxx, test/test002.cxx, test/test060.cxx, test/test061.cxx,
 test/test062.cxx, test/test064.cxx, test/test071.cxx, test/test075.cxx:
 - Removed unneeded headers as per #228 (though it has more changes).
 - Thanks Sam Kapilivsky for the patch.
2011-10-17  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/test051.cxx:
 - Work around problem with Visual C++ 2010.  Should fix #225.
 - Thanks Sam Kapilivsky.
2011-10-16  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/connection_base.cxx:
 - Fix gcc warning.
2011-10-16  Jeroen T. Vermeulen <jtv@xs4all.nl>
 win32/vc-test.mak.template:
 - Fix build on Visual C++ 2010.  Fixes #226.  Thanks Sam Kapilivsky.
2011-10-11  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/connection_base.cxx:
 - Fixed compile errors on gcc 3.3.
2011-10-07  Jeroen T. Vermeulen <jtv@xs4all.nl>